tests/baselines/reference/interfaceImplementation8.errors.txt
interfaceImplementation8.ts(9,12): error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
interfaceImplementation8.ts(12,7): error TS2420: Class 'C2' incorrectly implements interface 'i1'.
  Property 'name' is private in type 'C2' but not in type 'i1'.
interfaceImplementation8.ts(13,13): error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
interfaceImplementation8.ts(21,7): error TS2420: Class 'C5' incorrectly implements interface 'i1'.
  Property 'name' is private in type 'C2' but not in type 'i1'.
interfaceImplementation8.ts(22,7): error TS2420: Class 'C6' incorrectly implements interface 'i1'.
  Property 'name' is private in type 'C3' but not in type 'i1'.
interfaceImplementation8.ts(34,12): error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
interfaceImplementation8.ts(38,12): error TS2564: Property 'age' has no initializer and is not definitely assigned in the constructor.


==== interfaceImplementation8.ts (7 errors) ====
    /*
        1
    */
    interface i1 {
        name: string;
    }
    
    class C1 implements i1 {
        public name:string;
               ~~~~
!!! error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
    }
    
    class C2 implements i1 {
          ~~
!!! error TS2420: Class 'C2' incorrectly implements interface 'i1'.
!!! error TS2420:   Property 'name' is private in type 'C2' but not in type 'i1'.
        private name:string;
                ~~~~
!!! error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
    }
    
    class C3 {
        private name:any;
    }
    
    class C4 extends C1 implements i1{ }
    class C5 extends C2 implements i1{ }
          ~~
!!! error TS2420: Class 'C5' incorrectly implements interface 'i1'.
!!! error TS2420:   Property 'name' is private in type 'C2' but not in type 'i1'.
    class C6 extends C3 implements i1{ }
          ~~
!!! error TS2420: Class 'C6' incorrectly implements interface 'i1'.
!!! error TS2420:   Property 'name' is private in type 'C3' but not in type 'i1'.
    
    /*
        2
    */
    
    interface i2 {
        name: string;
        age: number;
    }
    
    class C7 {
        public name:string;
               ~~~~
!!! error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
    }
    
    class C8 extends C7 implements i2{
        public age:number;
               ~~~
!!! error TS2564: Property 'age' has no initializer and is not definitely assigned in the constructor.
    }
    